responsividade e nome das páginas

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 								<div class="dropdown" id="btn-orcamento-mobile">
 									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
 									<div class="dropdown-content">
-										<a href="contact.html">Identidade visual</a>
-										<a href="contact2.html">Design de posts</a>
-										<a href="contact3.html">Criação de sites</a>
-										<a href="contact4.html">Namming</a>
+										<a href="orcamento-idvisual.html">Identidade visual</a>
+										<a href="orcamento-post.html">Design de posts</a>
+										<a href="orcamento-sites.html">Criação de sites</a>
+										<a href="orcamento-namming.html">Namming</a>
 									</div>
 								</div>
 
@@ -96,10 +96,10 @@
 						<div class="dropdown" id="btn-orcamento-desktop">
 							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
 							<div class="dropdown-content">
-								<a href="contact.html">Identidade visual</a>
-								<a href="contact2.html">Design de posts</a>
-								<a href="contact3.html">Criação de sites</a>
-								<a href="contact4.html">Namming</a>
+								<a href="orcamento-idvisual.html">Identidade visual</a>
+								<a href="orcamento-post.html">Design de posts</a>
+								<a href="orcamento-sites.html">Criação de sites</a>
+								<a href="orcamento-namming.html">Namming</a>
 							</div>
 						</div>
 
@@ -144,7 +144,7 @@
 							</div>
 
 							<!-- HERO SUBTITLE -->
-							<div class="tp-caption small-text" data-x="30" data-y="360" data-voffset="[-40,-30,-20,0]"
+							<div class="tp-caption small-text" data-x="30" data-y="400" data-voffset="[-40,-30,-20,0]"
 								data-fontsize="[21,21,21,21]" data-lineheight="34" data-width="[none, none, none, 300]"
 								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
 									"delay":1100,
@@ -162,7 +162,7 @@
 							</div>
 
 							<!-- BUTTON -->
-							<div class="tp-caption" data-x="30" data-y="430" data-voffset="[60,60,60,100]" data-lineheight="55"
+							<div class="tp-caption" data-x="30" data-y="530" data-voffset="[60,60,60,100]" data-lineheight="55"
 								data-hoffset="0" data-frames='[{
 										"delay":1200,
 										"speed":900,
@@ -175,7 +175,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='contact.html' class='btn btn--lg btn--color'>Vamos conversar?</a>
+									}]'><a href='orcamento-idvisual.html' class='btn btn--lg btn--color'>Vamos conversar?</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -521,7 +521,7 @@
 									<p class="subtitle">Que tal construirmos</p>
 									<h2 class="section-title">Uma marca intencional<br> e memorável?</h2>
 									<div>
-										<a href="contact.html" class="btn btn--lg btn--color mt-40">
+										<a href="orcamento-idvisual.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
 										</a>
 									</div>
