--- a/pretihome.html
+++ b/pretihome.html
@@ -84,10 +84,10 @@
 								<div class="dropdown" id="btn-orcamento-mobile">
 									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
 									<div class="dropdown-content">
-										<a href="contact.html">Identidade visual</a>
-										<a href="contact2.html">Design de posts</a>
-										<a href="contact3.html">Criação de sites</a>
-										<a href="contact4.html">Namming</a>
+										<a href="orcamento-idvisual.html">Identidade visual</a>
+										<a href="orcamento-post.html">Design de posts</a>
+										<a href="orcamento-sites.html">Criação de sites</a>
+										<a href="orcamento-namming.html">Namming</a>
 									</div>
 								</div>
 
@@ -96,10 +96,10 @@
 						<div class="dropdown" id="btn-orcamento-desktop">
 							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
 							<div class="dropdown-content">
-								<a href="contact.html">Identidade visual</a>
-								<a href="contact2.html">Design de posts</a>
-								<a href="contact3.html">Criação de sites</a>
-								<a href="contact4.html">Namming</a>
+								<a href="orcamento-idvisual.html">Identidade visual</a>
+								<a href="orcamento-post.html">Design de posts</a>
+								<a href="orcamento-sites.html">Criação de sites</a>
+								<a href="orcamento-namming.html">Namming</a>
 							</div>
 						</div>
 
@@ -267,7 +267,7 @@
 									<p class="subtitle">Que tal construirmos</p>
 									<h2 class="section-title">Uma marca intencional<br> e memorável?</h2>
 									<div>
-										<a href="contact.html" class="btn btn--lg btn--color mt-40">
+										<a href="orcamento-idvisual.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
 										</a>
 									</div>
