--- a/elements.html
+++ b/elements.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Sedona | Elements</title>
 
@@ -49,7 +50,8 @@
 							</a>
 
 							<!-- Mobile toggle -->
-							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse"
+								data-target="#navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="nav__icon-toggle-bar"></span>
 								<span class="nav__icon-toggle-bar"></span>
@@ -62,7 +64,8 @@
 							<ul class="nav__menu">
 								<li class="nav__dropdown active">
 									<a href="index.html" aria-haspopup="true">Home</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
 										<li><a href="index.html">Home 1</a></li>
 										<li><a href="index-2.html">Home 2</a></li>
@@ -72,17 +75,19 @@
 								</li>
 								<li class="nav__dropdown">
 									<a href="#" aria-haspopup="true">Pages</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
 										<li><a href="about.html">About</a></li>
 										<li><a href="services.html">Services</a></li>
 										<li><a href="single-service.html">Single Service</a></li>
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="orcamento-idvisual.html">Contact</a></li>
 									</ul>
 								</li>
 								<li class="nav__dropdown">
 									<a href="#" aria-haspopup="true">Works</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
 										<li><a href="portfolio.html">Portfolio</a></li>
 										<li><a href="portfolio-gallery.html">Portfolio Gallery</a></li>
@@ -91,7 +96,8 @@
 								</li>
 								<li class="nav__dropdown">
 									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
 										<li><a href="icons.html">Icons</a></li>
 										<li><a href="elements.html">Elements</a></li>
@@ -99,7 +105,8 @@
 								</li>
 								<li class="nav__dropdown">
 									<a href="blog.html" aria-haspopup="true">Blog</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
 										<li><a href="blog-masonry.html">Blog Masonry</a></li>
 										<li><a href="blog.html">Blog Standard</a></li>
@@ -114,10 +121,14 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
+											class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
+											class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i
+											class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -129,10 +140,14 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
+										class="ui-twitter"></i></a>
+								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
+										class="ui-facebook"></i></a>
+								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i
+										class="ui-youtube"></i></a>
+								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i
+										class="ui-instagram"></i></a>
 							</div>
 						</div>
 
@@ -227,7 +242,7 @@
 										</label>
 										<span class="material__underline"></span>
 									</div>
-									
+
 									<div class="material__form-group form-group">
 										<input type="password" name="password" id="password" class="form-input material__input" required="">
 										<label for="name" class="material__label">Password Input
@@ -237,7 +252,8 @@
 									</div>
 
 									<div class="material__form-group form-group">
-										<textarea id="message" name="message" rows="7" class="form-input material__input" required=""></textarea>
+										<textarea id="message" name="message" rows="7" class="form-input material__input"
+											required=""></textarea>
 										<label for="message" class="material__label">Message
 											<abbr title="required" class="required">*</abbr>
 										</label>
@@ -261,7 +277,8 @@
 											<h6>Radio Buttons</h6>
 											<ul class="radio">
 												<li>
-													<input type="radio" class="radio-unput" name="radio" id="radio1" value="radio1" checked="checked">
+													<input type="radio" class="radio-unput" name="radio" id="radio1" value="radio1"
+														checked="checked">
 													<label for="radio1">Radio 1</label>
 												</li>
 												<li>
@@ -279,7 +296,8 @@
 											<h6>Checkboxes</h6>
 											<ul class="checkbox">
 												<li>
-													<input type="checkbox" class="checkbox-input" name="checkbox" id="checkbox1" value="1" checked="checked">
+													<input type="checkbox" class="checkbox-input" name="checkbox" id="checkbox1" value="1"
+														checked="checked">
 													<label for="checkbox1">Checkbox 1</label>
 												</li>
 												<li>
@@ -319,13 +337,16 @@
 									<!-- tab content -->
 									<div class="tabs__content tabs__content-trigger">
 										<div class="tabs__content-pane tabs__content-pane--active" id="tab-1">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+												error odio illum, id quisquam assumenda quo eos.</p>
 										</div>
 										<div class="tabs__content-pane" id="tab-2">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+												error odio illum, id quisquam assumenda quo eos.</p>
 										</div>
 										<div class="tabs__content-pane" id="tab-3">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+												error odio illum, id quisquam assumenda quo eos.</p>
 										</div>
 									</div>
 								</div>
@@ -335,14 +356,17 @@
 										<div class="accordion">
 											<div class="accordion__panel">
 												<div class="accordion__heading" id="heading-1">
-													<a data-toggle="collapse" href="#collapse-1" class="accordion__link accordion--is-open" aria-expanded="true" aria-controls="collapse-1">
+													<a data-toggle="collapse" href="#collapse-1" class="accordion__link accordion--is-open"
+														aria-expanded="true" aria-controls="collapse-1">
 														<h4>Best Features</h4>
 														<span class="accordion__toggle"></span>
 													</a>
 												</div>
-												<div id="collapse-1" class="collapse show" data-parent="#accordion" role="tabpanel" aria-labelledby="heading-1">
+												<div id="collapse-1" class="collapse show" data-parent="#accordion" role="tabpanel"
+													aria-labelledby="heading-1">
 													<div class="accordion__body">
-														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+														error odio illum, id quisquam assumenda quo eos.
 													</div>
 												</div>
 											</div>
@@ -351,14 +375,17 @@
 										<div class="accordion">
 											<div class="accordion__panel">
 												<div class="accordion__heading" id="heading-2">
-													<a data-toggle="collapse" href="#collapse-2" class="accordion__link" aria-expanded="true" aria-controls="collapse-2">
+													<a data-toggle="collapse" href="#collapse-2" class="accordion__link" aria-expanded="true"
+														aria-controls="collapse-2">
 														<h4>Creative Design</h4>
 														<span class="accordion__toggle"></span>
 													</a>
 												</div>
-												<div id="collapse-2" class="collapse" data-parent="#accordion" role="tabpanel" aria-labelledby="heading-2">
+												<div id="collapse-2" class="collapse" data-parent="#accordion" role="tabpanel"
+													aria-labelledby="heading-2">
 													<div class="accordion__body">
-														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+														error odio illum, id quisquam assumenda quo eos.
 													</div>
 												</div>
 											</div>
@@ -367,14 +394,17 @@
 										<div class="accordion">
 											<div class="accordion__panel">
 												<div class="accordion__heading" id="heading-3">
-													<a data-toggle="collapse" href="#collapse-3" class="accordion__link" aria-expanded="true" aria-controls="collapse-3">
+													<a data-toggle="collapse" href="#collapse-3" class="accordion__link" aria-expanded="true"
+														aria-controls="collapse-3">
 														<h4>Easily Customizable</h4>
 														<span class="accordion__toggle"></span>
 													</a>
 												</div>
-												<div id="collapse-3" class="collapse" data-parent="#accordion" role="tabpanel" aria-labelledby="heading-3">
+												<div id="collapse-3" class="collapse" data-parent="#accordion" role="tabpanel"
+													aria-labelledby="heading-3">
 													<div class="accordion__body">
-														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum error odio illum, id quisquam assumenda quo eos.
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officia obcaecati, nostrum
+														error odio illum, id quisquam assumenda quo eos.
 													</div>
 												</div>
 											</div>
@@ -391,24 +421,28 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="alert alert-success alert-dismissible fade show" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+												aria-hidden="true">×</span></button>
 										<strong>Success!</strong> This is succesful message box.
 									</div>
 
 									<div class="alert alert-info alert-dismissible fade show" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+												aria-hidden="true">×</span></button>
 										<strong>Information!</strong> This is info message box.
 									</div>
 								</div>
 
 								<div class="col-md-6">
 									<div class="alert alert-warning alert-dismissible fade show" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+												aria-hidden="true">×</span></button>
 										<strong>Notice box!</strong> This is notice message box.
 									</div>
 
 									<div class="alert alert-danger alert-dismissible fade show" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+												aria-hidden="true">×</span></button>
 										<strong>Error!</strong> This is error message box.
 									</div>
 								</div>
@@ -430,7 +464,8 @@
 								<div class="widget widget-about-us">
 									<!-- Logo -->
 									<a href="index.html" class="logo-container flex-child">
-										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x"
+											alt="logo">
 									</a>
 								</div>
 							</div> <!-- end logo -->
@@ -459,10 +494,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
+												class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
+												class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+											target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+											target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -495,4 +534,5 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
