Forms Google e nova logo

--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo-larts.png" srcset="img/logo-larts.png 1x, img/logo-larts@2x.png 2x"
-									alt="logo">
+								<img class="logo" src="img/logo-larts-novo.png"
+									srcset="img/logo-larts-novo.png 1x, img/logo-larts-novo2x.png 2x" alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
@@ -83,24 +83,25 @@
 
 								<div class="dropdown" id="btn-orcamento-mobile">
 									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
-									<div class="dropdown-content">
+									<!-- <div class="dropdown-content">
 										<a href="orcamento-idvisual.html">Identidade visual</a>
 										<a href="orcamento-post.html">Design de posts</a>
 										<a href="orcamento-sites.html">Criação de sites</a>
 										<a href="orcamento-namming.html">Namming</a>
-									</div>
+									</div> -->
 								</div>
 
 						</nav> <!-- end nav-wrap -->
 
 						<div class="dropdown" id="btn-orcamento-desktop">
-							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
-							<div class="dropdown-content">
+							<a href="orcamento-idvisual.html"><button class="btn btn--lg btn--color"
+									id="btn-orcamento">Orçamento</button></a>
+							<!-- <div class="dropdown-content">
 								<a href="orcamento-idvisual.html">Identidade visual</a>
 								<a href="orcamento-post.html">Design de posts</a>
 								<a href="orcamento-sites.html">Criação de sites</a>
 								<a href="orcamento-namming.html">Namming</a>
-							</div>
+							</div> -->
 						</div>
 
 					</div> <!-- end flex-parent -->
