--- a/orcamento-idvisual.html
+++ b/orcamento-idvisual.html
@@ -46,8 +46,8 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo-larts.png" srcset="img/logo-larts.png 1x, img/logo-larts@2x.png 2x"
-									alt="logo">
+								<img class="logo" src="img/logo-larts-novo.png"
+									srcset="img/logo-larts-novo.png 1x, img/logo-larts-novo2x.png 2x" alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
@@ -82,25 +82,27 @@
 								</li>
 
 								<div class="dropdown" id="btn-orcamento-mobile">
-									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
-									<div class="dropdown-content">
+									<a href="orcamento-idvisual.html"><button class="btn btn--lg btn--color"
+											id="btn-orcamento">Orçamento</button></a>
+									<!-- <div class="dropdown-content">
 										<a href="orcamento-idvisual.html">Identidade visual</a>
 										<a href="orcamento-post.html">Design de posts</a>
 										<a href="orcamento-sites.html">Criação de sites</a>
 										<a href="orcamento-namming.html">Namming</a>
-									</div>
+									</div> -->
 								</div>
 
 						</nav> <!-- end nav-wrap -->
 
 						<div class="dropdown" id="btn-orcamento-desktop">
-							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
-							<div class="dropdown-content">
+							<a href="orcamento-idvisual.html"><button class="btn btn--lg btn--color"
+									id="btn-orcamento">Orçamento</button></a>
+							<!-- <div class="dropdown-content">
 								<a href="orcamento-idvisual.html">Identidade visual</a>
 								<a href="orcamento-post.html">Design de posts</a>
 								<a href="orcamento-sites.html">Criação de sites</a>
 								<a href="orcamento-namming.html">Namming</a>
-							</div>
+							</div> -->
 						</div>
 
 					</div> <!-- end flex-parent -->
@@ -113,20 +115,23 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/page-title/contact.jpg);">
+			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/capa2.png);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Solicite seu orçamento</h1>
 					</div>
 				</div>
 			</section> <!-- end page title -->
-
-			<iframe id="JotFormIFrame-231008718386660" title="Formulário Id visual" onload="window.parent.scrollTo(0,0)"
+			<div class="text-center" style="margin-top: 150px;">
+				<iframe
+					src="https://docs.google.com/forms/d/e/1FAIpQLScwl6ffz1a3uH7u-MKcDjw00rudgTEHWJsdfwKWAGHacQJaKA/viewform?embedded=true"
+					width="100%" height="2343" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+			</div>
+			<!-- <iframe id="JotFormIFrame-231008718386660" title="Formulário Id visual" onload="window.parent.scrollTo(0,0)"
 				allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera"
 				src="https://form.jotform.com/231008718386660" frameborder="0"
 				style="min-width:100%;max-width:100%;height:539px;border:none;" scrolling="no">
-			</iframe>
+			</iframe> -->
 
 			<div class="container-fluid text-center text-md-center mt-40">
 				<span class="copyright">
