--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								Design Gráfico para buscar alternativas que solucionem as dores da sua marca de forma criativa e
 								marcante.</p>
 							<div class="mt-40">
-								<a href="#" class="btn btn--md btn--dark">
+								<a href="about.html" class="btn btn--md btn--dark">
 									<span>Saiba mais</span>
 								</a>
 							</div>
@@ -220,7 +220,7 @@
 								para decidimos juntos o resultado final.
 							</p>
 							<div class="mt-40">
-								<a href="#" class="btn btn--md btn--dark">
+								<a href="services.html" class="btn btn--md btn--dark">
 									<span>Nossos serviços</span>
 								</a>
 							</div>
