--- a/services.html
+++ b/services.html
@@ -300,7 +300,7 @@
 			</section> <!-- end services -->
 
 			<!-- Intro -->
-			<section class="section-wrap">
+			<!-- <section class="section-wrap">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-10">
@@ -314,10 +314,10 @@
 						</div>
 					</div>
 				</div>
-			</section> <!-- end intro -->
+			</section> end intro -->
 
 			<!-- Services -->
-			<section class="section-wrap pt-0 pb-0">
+			<!-- <section class="section-wrap pt-0 pb-0">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-4 col-lg-6">
@@ -401,7 +401,7 @@
 						</div>
 					</div>
 				</div>
-			</section> <!-- end services -->
+			</section> end services -->
 
 			<!-- Intro -->
 			<section class="section-wrap">
